feat(*): initial commit [POR-001]

--- a/src/i18n/locales.json
+++ b/src/i18n/locales.json
@@ -56,6 +56,7 @@
     "skills.redux.description": "Redux",
     "skills.ionic.description": "Ionic",
     "skills.cordova.description": "Cordova",
+    "skills.threejs.description": "ThreeJS",
     "project.card.github.link": "GitHub",
     "project.card.github.title": "GitHub project link",
     "project.card.website.link": "Website",
@@ -118,6 +119,7 @@
     "skills.redux.description": "Redux",
     "skills.ionic.description": "Ionic",
     "skills.cordova.description": "Cordova",
+    "skills.threejs.description": "ThreeJS",
     "project.card.github.link": "GitHub",
     "project.card.github.title": "Link al proyecto en GitHub",
     "project.card.website.link": "Website",
