feat(*): initial commit [POR-001]

--- a/src/i18n/locales.json
+++ b/src/i18n/locales.json
@@ -7,17 +7,18 @@
     "nav.works": "Works",
     "nav.skills": "Skills",
     "nav.projects": "Projects",
-    "nav.contacts": "Contact",
+    "nav.contact": "Contact",
     "datepicker.label": "Select language",
     "banner.text": "Currently working at",
     "title.home": "Home",
     "title.works": "Works",
     "title.skills": "Skills",
     "title.projects": "Projects",
+    "title.contact": "Contact",
     "section.works": "Works Experience",
     "section.skills": "Skills",
     "section.projects": "Projects",
-    "section.contacts": "",
+    "section.contact": "Contact",
     "social.github": "Access Agustín Cammarota's GitHub profile",
     "social.linkedin": "Access Agustín Cammarota's Linkedin profile",
     "social.email": "Access Agustín Cammarota's Microsoft Outlook profile",
@@ -60,7 +61,10 @@
     "project.card.github.link": "GitHub",
     "project.card.github.title": "GitHub project link",
     "project.card.website.link": "Website",
-    "project.card.website.title": "Website link"
+    "project.card.website.title": "Website link",
+    "not.found.title": "404 page",
+    "not.found.header": "Ops, page not found.",
+    "not.found.link": "Home"
   },
   "es": {
     "about.cv.link": "Descargar CV",
@@ -70,17 +74,18 @@
     "nav.works": "Experiencia",
     "nav.skills": "Skills",
     "nav.projects": "Proyectos",
-    "nav.contacts": "Contacto",
+    "nav.contact": "Contacto",
     "datepicker.label": "Seleccionar idioma",
     "banner.text": "Trabajando actualmente en",
     "title.home": "Inicio",
     "title.works": "Experiencia",
     "title.skills": "Skills",
     "title.projects": "Proyectos",
+    "title.contact": "Contacto",
     "section.works": "Experiencia",
     "section.skills": "Skills",
     "section.projects": "Proyectos",
-    "section.contacts": "",
+    "section.contact": "Contacto",
     "social.github": "Acceder al perfil de GitHub de Agustín Cammarota",
     "social.linkedin": "Acceder al perfil de LinkedIn de Agustín Cammarota",
     "social.email": "Acceder al perfil de Microsoft Outlook de Agustín Cammarota",
@@ -123,6 +128,9 @@
     "project.card.github.link": "GitHub",
     "project.card.github.title": "Link al proyecto en GitHub",
     "project.card.website.link": "Website",
-    "project.card.website.title": "Link a la Website"
+    "project.card.website.title": "Link a la Website",
+    "not.found.title": "Página 404",
+    "not.found.header": "Ops, página no encontrada.",
+    "not.found.link": "Home"
   }
 }
