feat(*): add SEO meta data [POR-002]

--- a/src/i18n/locales.json
+++ b/src/i18n/locales.json
@@ -10,11 +10,21 @@
     "nav.contact": "Contact",
     "datepicker.label": "Select language",
     "banner.text": "Currently working at",
-    "title.home": "Home",
-    "title.works": "Works",
-    "title.skills": "Skills",
-    "title.projects": "Projects",
-    "title.contact": "Contact",
+    "title.home": "About Me | Agustín Cammarota | Software Architect",
+    "description.home": "Learn more about Agustín Cammarota, software architect with a strong background in developing innovative digital solutions. Discover his vision, values, and approach to designing scalable and sustainable architectures.",
+    "keywords.home": "about me, Agustín Cammarota, software architect, digital solutions, software design, scalable architectures, innovative technology, software development, professional approach",
+    "title.works": "Work Experience | Agustín Cammarota | Software Architect",
+    "description.works": "Explore the work experience of Agustín Cammarota, software architect. Learn about his journey in designing and developing innovative technological solutions for leading companies in the industry.",
+    "keywords.works": "work experience, Agustín Cammarota, software architect, software development, technological solutions, experience with companies, professional journey, software projects, architecture design, high-impact software",
+    "title.skills": "Skills | Agustín Cammarota | Software Architect",
+    "description.skills": "Discover the technical skills of Agustín Cammarota, software architect. Learn about the tools, languages, and technologies he uses to develop scalable, high-performance solutions.",
+    "keywords.skills": "technical skills, Agustín Cammarota, software architect, development tools, programming languages, scalable technologies, software solutions, software architecture, high-performance technologies",
+    "title.projects": "Projects | Agustín Cammarota | Software Architect",
+    "description.projects": "Explore the projects of Agustín Cammarota, software architect. Discover innovative solutions and scalable applications designed to solve technological challenges.",
+    "keywords.projects": "projects, Agustín Cammarota, software architect, digital solutions, scalable applications, software development, software architecture, project portfolio, tech projects",
+    "title.contact": "Contact | Agustín Cammarota | Software Architect",
+    "description.contact": "Get in touch with Agustín Cammarota, software architect, to discuss projects, collaborate, or request software development and scalable architecture design services.",
+    "keywords.contact": "contact, Agustín Cammarota, software architect, contact software architect, software development, digital solutions, software architecture, professional collaboration",
     "section.works": "Works Experience",
     "section.skills": "Skills",
     "section.projects": "Projects",
@@ -62,7 +72,9 @@
     "project.card.github.title": "GitHub project link",
     "project.card.website.link": "Website",
     "project.card.website.title": "Website link",
-    "not.found.title": "404 page",
+    "not.found.title": "Page Not Found | Agustín Cammarota | Software Architect",
+    "not.found.description": "The page you are looking for cannot be found. Return to the homepage and explore the portfolio of Agustín Cammarota, software architect and digital solutions developer.",
+    "not.found.keywords": "page not found, 404, Agustín Cammarota, software architect, portfolio, error page, digital solutions",
     "not.found.header": "Ops, page not found.",
     "not.found.link": "Home",
     "contact.section.title": "I am open to freelance opportunities. If you have any other requests or questions, please feel free to reach out.",
@@ -73,7 +85,9 @@
     "form.message.text": "Message",
     "form.button.text": "Send",
     "form.fail.state": "Retry",
-    "theme.manager.aria.label": "Selected theme"
+    "theme.manager.aria.label": "Selected theme",
+    "metadata.social.title": "Agustín Cammarota | Software Architect",
+    "metadata.social.description": "Agustín Cammarota – Portfolio of a Software Architect and Digital Solutions Developer."
   },
   "es": {
     "about.cv.link": "Descargar CV",
@@ -86,11 +100,21 @@
     "nav.contact": "Contacto",
     "datepicker.label": "Seleccionar idioma",
     "banner.text": "Trabajando actualmente en",
-    "title.home": "Inicio",
-    "title.works": "Experiencia",
-    "title.skills": "Skills",
-    "title.projects": "Proyectos",
-    "title.contact": "Contacto",
+    "title.home": "Sobre mí | Agustín Cammarota | Arquitecto de Software",
+    "description.home": "Conoce más sobre Agustín Cammarota, arquitecto de software con una sólida trayectoria en el desarrollo de soluciones digitales innovadoras. Descubre su visión, valores y enfoque en el diseño de arquitecturas escalables y sostenibles.",
+    "keywords.home": "sobre mí, Agustín Cammarota, arquitecto de software, soluciones digitales, diseño de software, arquitecturas escalables, tecnología innovadora, desarrollo de software, enfoque profesional",
+    "title.works": "Experiencia Laboral | Agustín Cammarota | Arquitecto de Software",
+    "description.works": "Explora la experiencia laboral de Agustín Cammarota, arquitecto de software. Conoce su trayectoria en el diseño y desarrollo de soluciones tecnológicas innovadoras para empresas líderes en la industria.",
+    "keywords.works": "experiencia laboral, Agustín Cammarota, arquitecto de software, desarrollo de software, soluciones tecnológicas, experiencia en empresas, trayectoria profesional, proyectos de software, diseño de arquitecturas, software de alto impacto",
+    "title.skills": "Skills | Agustín Cammarota | Arquitecto de Software",
+    "description.skills": "Descubre las habilidades tecnológicas de Agustín Cammarota, arquitecto de software. Conoce las herramientas, lenguajes y tecnologías que utiliza para desarrollar soluciones escalables y de alto rendimiento.",
+    "keywords.skills": "skills, Agustín Cammarota, arquitecto de software, herramientas de desarrollo, lenguajes de programación, tecnologías escalables, soluciones de software, arquitectura de software, tecnologías de alto rendimiento",
+    "title.projects": "Proyectos | Agustín Cammarota | Arquitecto de Software",
+    "description.projects": "Explora los proyectos de Agustín Cammarota, arquitecto de software. Descubre soluciones innovadoras y aplicaciones escalables diseñadas para resolver desafíos tecnológicos.",
+    "keywords.projects": "proyectos, Agustín Cammarota, arquitecto de software, soluciones digitales, aplicaciones escalables, desarrollo de software, arquitectura de software, portafolio de proyectos, proyectos tecnológicos",
+    "title.contact": "Contacto | Agustín Cammarota | Arquitecto de Software",
+    "description.contact": "Ponte en contacto con Agustín Cammarota, arquitecto de software, para discutir proyectos, colaborar o solicitar servicios de desarrollo de software y diseño de arquitecturas escalables.",
+    "keywords.contact": "contacto, Agustín Cammarota, arquitecto de software, contactar arquitecto de software, desarrollo de software, soluciones digitales, arquitectura de software, colaboración profesional",
     "section.works": "Experiencia",
     "section.skills": "Skills",
     "section.projects": "Proyectos",
@@ -138,7 +162,9 @@
     "project.card.github.title": "Link al proyecto en GitHub",
     "project.card.website.link": "Website",
     "project.card.website.title": "Link a la Website",
-    "not.found.title": "Página 404",
+    "not.found.title": "Página no encontrada | Agustín Cammarota | Arquitecto de Software",
+    "not.found.description": "La página que buscas no se encuentra. Regresa al inicio y explora el portafolio de Agustín Cammarota, arquitecto de software y desarrollador de soluciones digitales.",
+    "not.found.keywords": "página no encontrada, 404, Agustín Cammarota, arquitecto de software, portafolio, página de error, soluciones digitales",
     "not.found.header": "Ops, página no encontrada.",
     "not.found.link": "Home",
     "contact.section.title": "Estoy abierto a oportunidades freelance. Si tienes alguna otra solicitud o pregunta, no dudes en ponerte en contacto.",
@@ -149,6 +175,8 @@
     "form.message.text": "Mensaje",
     "form.button.text": "Enviar",
     "form.fail.state": "Reintentar",
-    "theme.manager.aria.label": "Tema seleccionado"
+    "theme.manager.aria.label": "Tema seleccionado",
+    "metadata.social.title": "Agustín Cammarota | Arquitecto de Software",
+    "metadata.social.description": "Agustín Cammarota – Portafolio de Arquitecto de Software y Desarrollador de Soluciones Digitales."
   }
 }
