feat(*): add error 500 page [POR-007]

--- a/src/i18n/locales.json
+++ b/src/i18n/locales.json
@@ -72,6 +72,11 @@
     "project.card.github.title": "GitHub project link",
     "project.card.website.link": "Website",
     "project.card.website.title": "Website link",
+    "internal.error.title": "Internal Error | Agustín Cammarota | Software Architect",
+    "internal.error.description": "Oops! Something went wrong on our server. We're working to fix this issue. Please try refreshing the page or come back in a few minutes. If the problem persists, feel free to contact us for assistance.",
+    "internal.error.keywords": "error 500, internal server error, server issue, website error, page not loading, technical problem, site unavailable, server maintenance, contact support, troubleshooting",
+    "internal.error.header": "Sorry, it's me not you.",
+    "internal.error.link": "Let me try again!",
     "not.found.title": "Page Not Found | Agustín Cammarota | Software Architect",
     "not.found.description": "The page you are looking for cannot be found. Return to the homepage and explore the portfolio of Agustín Cammarota, software architect and digital solutions developer.",
     "not.found.keywords": "page not found, 404, Agustín Cammarota, software architect, portfolio, error page, digital solutions",
@@ -162,6 +167,11 @@
     "project.card.github.title": "Link al proyecto en GitHub",
     "project.card.website.link": "Website",
     "project.card.website.title": "Link a la Website",
+    "internal.error.title": "Error Interno | Agustín Cammarota | Arquitecto de Software",
+    "internal.error.description": "¡Ups! Algo salió mal en nuestro servidor. Estamos trabajando para resolver este problema. Intente recargar la página o vuelva en unos minutos. Si el problema persiste, no dude en contactarnos para obtener ayuda.",
+    "internal.error.keywords": "error 500, error interno del servidor, problema de servidor, error del sitio web, página no se carga, problema técnico, sitio no disponible, mantenimiento del servidor, contactar soporte, solución de problemas",
+    "internal.error.header": "Lo siento, es culpa nuestra, no suya.",
+    "internal.error.link": "Intentémoslo de nuevo!",
     "not.found.title": "Página no encontrada | Agustín Cammarota | Arquitecto de Software",
     "not.found.description": "La página que buscas no se encuentra. Regresa al inicio y explora el portafolio de Agustín Cammarota, arquitecto de software y desarrollador de soluciones digitales.",
     "not.found.keywords": "página no encontrada, 404, Agustín Cammarota, arquitecto de software, portafolio, página de error, soluciones digitales",
