--- a/src/i18n/locales.json
+++ b/src/i18n/locales.json
@@ -68,6 +68,8 @@
     "skills.ionic.description": "Ionic",
     "skills.cordova.description": "Cordova",
     "skills.threejs.description": "ThreeJS",
+    "skills.vitest.description": "Vitest",
+    "skills.playwright.description": "Playwright",
     "project.card.github.link": "GitHub",
     "project.card.github.title": "GitHub project link",
     "project.card.website.link": "Website",
@@ -163,6 +165,8 @@
     "skills.ionic.description": "Ionic",
     "skills.cordova.description": "Cordova",
     "skills.threejs.description": "ThreeJS",
+    "skills.vitest.description": "Vitest",
+    "skills.playwright.description": "Playwright",
     "project.card.github.link": "GitHub",
     "project.card.github.title": "Link al proyecto en GitHub",
     "project.card.website.link": "Website",
